Mas optimizaciones