@@ -24,110 +24,117 @@ import java.util.List;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    private final JwtFilter jwtFilter;
+        private final JwtFilter jwtFilter;
 
-    public SecurityConfig(JwtFilter jwtFilter) {
-        this.jwtFilter = jwtFilter;
-    }
+        public SecurityConfig(JwtFilter jwtFilter) {
+                this.jwtFilter = jwtFilter;
+        }
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(auth -> auth
-                        // Los dispatches ASYNC son continuaciones de requests ya autenticadas.
-                        // El JwtFilter (OncePerRequestFilter) no corre en ASYNC, por lo que
-                        // hay que permitirlos explícitamente para que StreamingResponseBody funcione.
-                        .dispatcherTypeMatchers(jakarta.servlet.DispatcherType.ASYNC).permitAll()
+        @Bean
+        public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+                return http
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                .csrf(csrf -> csrf.disable())
+                                .authorizeHttpRequests(auth -> auth
+                                                // Los dispatches ASYNC son continuaciones de requests ya autenticadas.
+                                                // El JwtFilter (OncePerRequestFilter) no corre en ASYNC, por lo que
+                                                // hay que permitirlos explícitamente para que StreamingResponseBody
+                                                // funcione.
+                                                .dispatcherTypeMatchers(jakarta.servlet.DispatcherType.ASYNC)
+                                                .permitAll()
 
-                        // ===== RUTAS PÚBLICAS =====
-                        // Autenticación
-                        .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/users").permitAll()
+                                                // ===== RUTAS PÚBLICAS =====
+                                                // Autenticación
+                                                .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
+                                                .requestMatchers(HttpMethod.POST, "/api/users").permitAll()
 
-                        // Vistas públicas
-                        .requestMatchers("/login", "/").permitAll()
+                                                // Vistas públicas
+                                                .requestMatchers("/login", "/").permitAll()
 
-                        // Recursos estáticos
-                        .requestMatchers("/styles/**", "/scripts/**").permitAll()
-                        .requestMatchers("/robots.txt", "/sitemap.xml", "/manifest.json").permitAll()
+                                                // Recursos estáticos
+                                                .requestMatchers("/styles/**", "/scripts/**").permitAll()
+                                                .requestMatchers("/robots.txt", "/sitemap.xml", "/manifest.json")
+                                                .permitAll()
 
-                        // Documentación Swagger
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html", "/webjars/**",
-                                "/swagger-resources/**", "/configuration/**")
-                        .permitAll()
+                                                // Documentación Swagger
+                                                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**",
+                                                                "/swagger-ui.html", "/webjars/**",
+                                                                "/swagger-resources/**", "/configuration/**")
+                                                .permitAll()
 
-                        // ===== RUTAS PROTEGIDAS =====
-                        // El control de acceso específico se maneja con @PreAuthorize en los
-                        // controladores
-                        // Todas las demás rutas requieren autenticación
-                        .anyRequest().authenticated())
-                .headers(headers -> headers
-                        // HSTS - Force HTTPS
-                        .httpStrictTransportSecurity(hsts -> hsts
-                                .includeSubDomains(true)
-                                .maxAgeInSeconds(31536000))
-                        // Content Security Policy (relajado para Swagger UI)
-                        .contentSecurityPolicy(csp -> csp
-                                .policyDirectives("default-src 'self'; " +
-                                        "script-src 'self' 'unsafe-inline' 'unsafe-eval'; " +
-                                        "style-src 'self' 'unsafe-inline'; " +
-                                        "img-src 'self' data: https:; " +
-                                        "font-src 'self' data:; " +
-                                        "connect-src 'self'; " +
-                                        "frame-ancestors 'none'; " +
-                                        "base-uri 'self'; " +
-                                        "form-action 'self'; " +
-                                        "upgrade-insecure-requests"))
-                        // X-Frame-Options
-                        .frameOptions(frame -> frame.deny())
-                        // X-Content-Type-Options
-                        .contentTypeOptions(contentType -> {
-                        })
-                        // X-XSS-Protection
-                        .xssProtection(xss -> {
-                        })
-                        // Referrer-Policy
-                        .referrerPolicy(referrer -> referrer.policy(
-                                org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling(exceptions -> exceptions
-                        .authenticationEntryPoint((request, response, authException) -> {
-                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                            response.setContentType("application/json");
-                            response.getWriter().write("{\"status\":401,\"message\":\"No autorizado\"}");
-                        }))
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
-    }
+                                                // ===== RUTAS PROTEGIDAS =====
+                                                // El control de acceso específico se maneja con @PreAuthorize en los
+                                                // controladores
+                                                // Todas las demás rutas requieren autenticación
+                                                .anyRequest().authenticated())
+                                .headers(headers -> headers
+                                                // HSTS - Force HTTPS
+                                                .httpStrictTransportSecurity(hsts -> hsts
+                                                                .includeSubDomains(true)
+                                                                .maxAgeInSeconds(31536000))
+                                                // Content Security Policy (relajado para Swagger UI)
+                                                .contentSecurityPolicy(csp -> csp
+                                                                .policyDirectives("default-src 'self'; " +
+                                                                                "script-src 'self' 'unsafe-inline' 'unsafe-eval'; "
+                                                                                +
+                                                                                "style-src 'self' 'unsafe-inline'; " +
+                                                                                "img-src 'self' data: https:; " +
+                                                                                "font-src 'self' data:; " +
+                                                                                "connect-src 'self'; " +
+                                                                                "frame-ancestors 'none'; " +
+                                                                                "base-uri 'self'; " +
+                                                                                "form-action 'self'; " +
+                                                                                "upgrade-insecure-requests"))
+                                                // X-Frame-Options
+                                                .frameOptions(frame -> frame.deny())
+                                                // X-Content-Type-Options
+                                                .contentTypeOptions(contentType -> {
+                                                })
+                                                // X-XSS-Protection
+                                                .xssProtection(xss -> {
+                                                })
+                                                // Referrer-Policy
+                                                .referrerPolicy(referrer -> referrer.policy(
+                                                                org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)))
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                .exceptionHandling(exceptions -> exceptions
+                                                .authenticationEntryPoint((request, response, authException) -> {
+                                                        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                                                        response.setContentType("application/json");
+                                                        response.getWriter().write(
+                                                                        "{\"status\":401,\"message\":\"No autorizado\"}");
+                                                }))
+                                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+                                .build();
+        }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
+        @Bean
+        public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+                return authConfig.getAuthenticationManager();
+        }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // Permitir Angular (puerto 4200), servidor (8080, 8081) y dominio de producción
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:4200",
-                "http://localhost:8080",
-                "http://localhost:8081",
-                "http://127.0.0.1:4200",
-                "http://127.0.0.1:8080",
-                "http://127.0.0.1:8081",
-                "https://economato.servehttp.com",
-                "https://pfl3wk99-4200.uks1.devtunnels.ms/"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                // Permitir Angular (puerto 4200), servidor (8080, 8081) y dominio de producción
+                configuration.setAllowedOrigins(Arrays.asList(
+                                "http://localhost:4200",
+                                "http://localhost:8080",
+                                "http://localhost:8081",
+                                "http://127.0.0.1:4200",
+                                "http://127.0.0.1:8080",
+                                "http://127.0.0.1:8081",
+                                "https://economato.servehttp.com",
+                                "https://pfl3wk99-4200.uks1.devtunnels.ms/"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin"));
+                configuration.setExposedHeaders(List.of("Authorization"));
+                configuration.setAllowCredentials(true);
+                configuration.setMaxAge(86400L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
